OK-611 Päivitetty DAO-kerroksen testit